# csad2125ki404kopiyor09

./: CMakeLists.txt  README.md  КІ-404_Копій_АПКС_Лаб-1.docx
.github/workflows/: test.yml
ci/: build.sh
src/HW_task2/csadkopiy09/: csadkopiy09.ino
src/SW_task2/csadkopiy09/: csadkopiy09.sln
src/SW_task2/csadkopiy09/csadkopiy09/: csadkopiy09.cpp  csadkopiy09.vcxproj  csadkopiy09.vcxproj.filters
src/SW_task2/csadkopiy09/csadkopiy09/x64/Debug/: csadkopiy09.exe.recipe  csadkopiy09.ilk  vc143.idb
src/SW_task2/csadkopiy09/csadkopiy09/x64/Debug/csadkopiy09.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  csadkopiy09.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/SW_task2/csadkopiy09/csadkopiy09/x64/Release/: csadkopiy09.exe.recipe  csadkopiy09.iobj  csadkopiy09.ipdb
src/SW_task2/csadkopiy09/csadkopiy09/x64/Release/csadkopiy09.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  csadkopiy09.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
